--- a/themes/theme-flip-investimentos/layouts/default.htm
+++ b/themes/theme-flip-investimentos/layouts/default.htm
@@ -3,16 +3,7 @@ description = "Default layout"
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>October CMS - {{ this.page.title }}</title>
-        <meta name="description" content="{{ this.page.meta_description }}">
-        <meta name="title" content="{{ this.page.meta_title }}">
-        <meta name="author" content="OctoberCMS">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="generator" content="OctoberCMS">
-        <link rel="icon" type="image/png" href="{{ 'assets/images/october.png'|theme }}">
-        <link href="{{ 'assets/css/vendor.css'|theme }}" rel="stylesheet">
-        <link href="{{ 'assets/css/theme.css'|theme }}" rel="stylesheet">
+        {% partial 'site-head' %}
         {% styles %}
     </head>
     <body>
