--- a/themes/theme-flip-investimentos/layouts/default.htm
+++ b/themes/theme-flip-investimentos/layouts/default.htm
@@ -3,7 +3,7 @@ description = "Default layout"
 <!DOCTYPE html>
 <html>
     <head>
-        {% partial 'site-head' %}
+        {% partial 'site/head' %}
         {% styles %}
     </head>
     <body>
