--- a/themes/theme-flip-investimentos/partials/site/head.htm
+++ b/themes/theme-flip-investimentos/partials/site/head.htm
@@ -18,22 +18,13 @@
 <link rel="canonical" href="{{ this.page.canonical_url }}"/>
 
 <!-- Fonts -->
-<link rel="preload" crossorigin="anonymous" href="../assets/fonts/roboto-light.woff2" as="font">
-<link rel="preload" crossorigin="anonymous" href="../assets/fonts/roboto-regular.woff2" as="font">
-<link rel="preload" crossorigin="anonymous" href="../assets/fonts/roboto-bold.woff2" as="font">
-<link rel="preload" crossorigin="anonymous" href="../assets/fonts/robotoslab-regular.woff2" as="font">
-<link rel="preload" crossorigin="anonymous" href="../assets/fonts/robotoslab-bold.woff2" as="font">
+<link rel="preload" crossorigin="anonymous" href="{{ 'assets/fonts/roboto-light.woff2'|theme }}" as="font">
+<link rel="preload" crossorigin="anonymous" href="{{ 'assets/fonts/roboto-regular.woff2'|theme }}" as="font">
+<link rel="preload" crossorigin="anonymous" href="{{ 'assets/fonts/roboto-bold.woff2'|theme }}" as="font">
+<link rel="preload" crossorigin="anonymous" href="{{ 'assets/fonts/robotoslab-regular.woff2'|theme }}" as="font">
+<link rel="preload" crossorigin="anonymous" href="{{ 'assets/fonts/robotoslab-bold.woff2'|theme }}" as="font">
 
-<!-- Styles -->
-<!-- build:css ../assets/css/styles.min.css -->
-<link media="all" rel="stylesheet" href="assets/css/styles.css">
-<!-- endbuild -->
+<link media="all" rel="stylesheet" href="{{ 'assets/css/styles.min.css'|theme }}">
 
-<!-- Scripts -->
-<!-- build:js ../assets/js/bundle.min.js -->
-<script sync defer src="assets/js/lazyload.js"></script>
-<script sync defer src="assets/js/jquery.js"></script>
-<script sync defer src="assets/js/bootstrap.js"></script>
-<script sync defer src="assets/js/swiper.js"></script>
-<script sync defer src="assets/js/bundle.js"></script>
-<!-- endbuild -->
+<script sync defer src="{{ 'assets/js/main.min.js'|theme }}"></script>
+<script sync defer src="{{ 'assets/js/bundle.min.js'|theme }}"></script>
