--- a/themes/theme-flip-investimentos/partials/site/header.htm
+++ b/themes/theme-flip-investimentos/partials/site/header.htm
@@ -32,7 +32,7 @@
                 <a class="btn btn-lg btn-txt-yellow" href="{{ 'login'|page }}">Login</a>
             </li>
             <li class="dropdown">
-                <a class="dropdown-btn btn btn-lg btn-txt-yellow" >Meu acesso</a>
+                <a class="dropdown-btn btn btn-lg btn-txt-yellow" href="#">Meu acesso</a>
                 <div class="dropdown-menu dropdown-menu-right">
                     <a class="dropdown-link" href="{{ 'acervo'|page }}">Meus materiais</a>
                     <a class="dropdown-link" href="{{ 'novidades'|page }}">Novidades</a>
