--- a/themes/theme-flip-investimentos/partials/site/footer.htm
+++ b/themes/theme-flip-investimentos/partials/site/footer.htm
@@ -5,27 +5,27 @@
             <div class="d-flex flex-lg-row flex-column justify-content-between">   
                 <ul class="list-unstyled mb-0">
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="#">Quem somos</a>
+                        <a class="justify-content-lg-start justify-content-center" href="{{ 'sobre'|page }}">{{ "Sobre"|contenttext('SITE | Menu', true, "Texto do item de menu Sobre") }}</a>
                     </li>
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="#">Planos</a>
+                        <a class="justify-content-lg-start justify-content-center" href="{{ 'planos'|page }}">{{ "Planos"|contenttext('SITE | Menu', true, "Texto do item de menu Planos") }}</a>
                     </li>
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="#">Calculadora</a>
+                        <a class="justify-content-lg-start justify-content-center" href="{{ 'calculadora'|page }}">{{ "Calculadora"|contenttext('SITE | Menu', true, "Texto do item de menu Calculadora") }}</a>
                     </li>
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="#">Blog</a>
+                        <a class="justify-content-lg-start justify-content-center" href="{{ 'blog'|page }}">{{ "Blog"|contenttext('SITE | Menu', true, "Texto do item de menu Blog") }}</a>
                     </li>
                 </ul>   
                 <ul class="list-unstyled mb-0 mt-lg-0 mt-48 text-lg-left text-center">
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="#">Facebook</a>
+                        <a class="justify-content-lg-start justify-content-center" href="https://www.facebook.com/FlipInvestimentos/">Facebook</a>
                     </li>
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="#">Instagran</a>
+                        <a class="justify-content-lg-start justify-content-center" href="https://www.instagram.com/flipinvestimentos/">Instagran</a>
                     </li>
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="#">Linkedin</a>
+                        <a class="justify-content-lg-start justify-content-center" href="https://www.linkedin.com/company/flip-investimentos/">Linkedin</a>
                     </li>
                 </ul>
                 <ul class="list-unstyled mb-0 mt-lg-0 mt-48 text-lg-left text-center">
