--- a/themes/theme-flip-investimentos/partials/site/footer.htm
+++ b/themes/theme-flip-investimentos/partials/site/footer.htm
@@ -5,16 +5,16 @@
             <div class="d-flex flex-lg-row flex-column justify-content-between">   
                 <ul class="list-unstyled mb-0">
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="{{ 'sobre'|page }}">{{ "Sobre"|contenttext('SITE | Menu', true, "Texto do item de menu Sobre") }}</a>
+                        <a class="justify-content-lg-start justify-content-center" href="{{ 'sobre'|page }}">{{ "Sobre"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Sobre") }}</a>
                     </li>
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="{{ 'planos'|page }}">{{ "Planos"|contenttext('SITE | Menu', true, "Texto do item de menu Planos") }}</a>
+                        <a class="justify-content-lg-start justify-content-center" href="{{ 'planos'|page }}">{{ "Planos"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Planos") }}</a>
                     </li>
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="{{ 'calculadora'|page }}">{{ "Calculadora"|contenttext('SITE | Menu', true, "Texto do item de menu Calculadora") }}</a>
+                        <a class="justify-content-lg-start justify-content-center" href="{{ 'calculadora'|page }}">{{ "Calculadora"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Calculadora") }}</a>
                     </li>
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="{{ 'blog'|page }}">{{ "Blog"|contenttext('SITE | Menu', true, "Texto do item de menu Blog") }}</a>
+                        <a class="justify-content-lg-start justify-content-center" href="{{ 'blog'|page }}">{{ "Blog"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Blog") }}</a>
                     </li>
                 </ul>   
                 <ul class="list-unstyled mb-0 mt-lg-0 mt-48 text-lg-left text-center">
