--- a/themes/theme-flip-investimentos/partials/site/header.htm
+++ b/themes/theme-flip-investimentos/partials/site/header.htm
@@ -14,30 +14,30 @@
         </div>
         <ul class="header-item list-unstyled mb-0 d-flex">
             <li>
-                <a class="btn btn-lg btn-txt-yellow d-lg-inline-block d-none" href="{{ ''|page }}">{{ "Home"|contenttext('SITE | Menu', true, "Texto do item de menu Home") }}</a>
+                <a class="btn btn-lg btn-txt-yellow d-lg-inline-block d-none" href="{{ ''|page }}">{{ "Home"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Home") }}</a>
             </li>
             <li>    
-                <a class="btn btn-lg btn-txt-yellow d-lg-inline-block d-none" href="{{ 'planos'|page }}">{{ "Planos"|contenttext('SITE | Menu', true, "Texto do item de menu Planos") }}</a>
+                <a class="btn btn-lg btn-txt-yellow d-lg-inline-block d-none" href="{{ 'planos'|page }}">{{ "Planos"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Planos") }}</a>
             </li>
             <li>
-                <a class="btn btn-lg btn-txt-yellow d-lg-inline-block d-none" href="{{ 'calculadora'|page }}">{{ "Calculadora"|contenttext('SITE | Menu', true, "Texto do item de menu Calculadora") }}</a>
+                <a class="btn btn-lg btn-txt-yellow d-lg-inline-block d-none" href="{{ 'calculadora'|page }}">{{ "Calculadora"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Calculadora") }}</a>
             </li>
             <li>
-                <a class="btn btn-lg btn-txt-yellow d-lg-inline-block d-none" href="{{ 'blog'|page }}">{{ "Blog"|contenttext('SITE | Menu', true, "Texto do item de menu Blog") }}</a>
+                <a class="btn btn-lg btn-txt-yellow d-lg-inline-block d-none" href="{{ 'blog'|page }}">{{ "Blog"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Blog") }}</a>
             </li>
             <li>
-                <a class="btn btn-lg btn-txt-yellow d-lg-inline-block d-none" href="{{ 'sobre'|page }}">{{ "Sobre"|contenttext('SITE | Menu', true, "Texto do item de menu Sobre") }}</a>
+                <a class="btn btn-lg btn-txt-yellow d-lg-inline-block d-none" href="{{ 'sobre'|page }}">{{ "Sobre"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Sobre") }}</a>
             </li>
             <li>
-                <a class="btn btn-lg btn-txt-yellow" href="{{ 'login'|page }}">{{ "Login"|contenttext('SITE | Menu', true, "Texto do item de menu Sobre") }}</a>
+                <a class="btn btn-lg btn-txt-yellow" href="{{ 'login'|page }}">{{ "Login"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Sobre") }}</a>
             </li>
             <li class="dropdown">
-                <a class="dropdown-btn btn btn-lg btn-txt-yellow" href="#">{{ "Meu Acessp"|contenttext('SITE | Menu', true, "Texto do item de menu Meu Acesso") }}</a>
+                <a class="dropdown-btn btn btn-lg btn-txt-yellow" href="#">{{ "Meu Acessp"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Meu Acesso") }}</a>
                 <div class="dropdown-menu dropdown-menu-right">
-                    <a class="dropdown-link" href="{{ 'videos'|page }}">{{ "Videos"|contenttext('SITE | Menu', true, "Texto do item de menu Meud Videos") }}</a>
-                    <a class="dropdown-link" href="{{ 'podcast'|page }}">{{ "PodCast"|contenttext('SITE | Menu', true, "Texto do item de menu PodCast") }}</a>
-                    <a class="dropdown-link" href="{{ 'minha-carteira'|page }}">{{ "Minha Carteira"|contenttext('SITE | Menu', true, "Texto do item de menu Minha Carteira") }}</a>
-                    <a class="dropdown-link" href="{{ 'carteiras-recomendadas'|page }}">{{ "Carteiras Recomendadas"|contenttext('SITE | Menu', true, "Texto do item de menu Meu Carteiras Recomendadas") }}</a>
+                    <a class="dropdown-link" href="{{ 'videos'|page }}">{{ "Videos"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Meud Videos") }}</a>
+                    <a class="dropdown-link" href="{{ 'podcast'|page }}">{{ "PodCast"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu PodCast") }}</a>
+                    <a class="dropdown-link" href="{{ 'minha-carteira'|page }}">{{ "Minha Carteira"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Minha Carteira") }}</a>
+                    <a class="dropdown-link" href="{{ 'carteiras-recomendadas'|page }}">{{ "Carteiras Recomendadas"|contenttext('SITE | Menu - Header e Footer', true, "Texto do item de menu Meu Carteiras Recomendadas") }}</a>
                 </div>
             </li>
         </ul>
