--- a/themes/theme-flip-investimentos/partials/site/footer.htm
+++ b/themes/theme-flip-investimentos/partials/site/footer.htm
@@ -19,26 +19,27 @@
                 </ul>   
                 <ul class="list-unstyled mb-0 mt-lg-0 mt-48 text-lg-left text-center">
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="https://www.facebook.com/FlipInvestimentos/">Facebook</a>
+                        <a class="justify-content-lg-start justify-content-center" href='{{ "https://www.facebook.com/FlipInvestimentos/"|contenttext("SITE | Menu - Header e Footer", true, "Item do Footer - Link Facebook") }}'>{{ "Facebook"|contenttext('SITE | Menu - Header e Footer', true, "Item do Footer - Texto Facebook") }}</a>
                     </li>
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="https://www.instagram.com/flipinvestimentos/">Instagran</a>
+                        <a class="justify-content-lg-start justify-content-center" href='{{ "https://www.instagram.com/flipinvestimentos/"|contenttext("SITE | Menu - Header e Footer", true, "Item do Footer - Link Instagran") }}'>{{ "Instagran"|contenttext('SITE | Menu - Header e Footer', true, "Item do Footer - Texto Instagran") }}</a>
                     </li>
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="https://www.linkedin.com/company/flip-investimentos/">Linkedin</a>
+                        <a class="justify-content-lg-start justify-content-center" href='{{ "https://www.linkedin.com/company/flip-investimentos/"|contenttext("SITE | Menu - Header e Footer", true, "Item do Footer - Link Instagran") }}'>{{ "Linkedin"|contenttext('SITE | Menu - Header e Footer', true, "Item do Footer - Texto Instagran") }}</a>
                     </li>
                 </ul>
                 <ul class="list-unstyled mb-0 mt-lg-0 mt-48 text-lg-left text-center">
                     <li>
                         <a class="justify-content-lg-start justify-content-center" href="#">
-                            <img width="20" class="lozad mr-5" data-src="../assets/images/icons/email.svg" alt="icon-email">
-                            <span>contato@flipinvestimentos.com.br</span>
+                            <img width="20" class="lozad mr-5" data-src="{{ 'assets/images/icons/email.svg'|theme }}" alt="icon-email">
+                            <span>{{ "contato@flipinvestimentos.com.br"|contenttext("SITE | Menu - Header e Footer", true, "Item do Footer - E-mail de contato") }}</span>
                         </a>
                     </li>
                     <li>
-                        <a class="justify-content-lg-start justify-content-center" href="#">
-                            <img width="20" class="lozad mr-5" data-src="../assets/images/icons/telephone.svg" alt="icon-telephone"> 
-                            <span>31 9 9263-2664</span>
+                    {% set phoneNumber = "31 9 9263-2664"|contenttext("SITE | Menu - Header e Footer", true, "Item do Footer - Telefone de Contato de contato") %}
+                        <a class="justify-content-lg-start justify-content-center" href="tel:0{{ phoneNumber|replace_regex('/[^0-9+]/', '') }}">
+                            <img width="20" class="lozad mr-5" data-src="{{ 'assets/images/icons/telephone.svg'|theme }}" alt="icon-telephone"> 
+                            <span>{{ phoneNumber }}</span>
                         </a>
                     </li>
                 </ul>
