--- a/plugins/rainlab/user/components/account/signin.htm
+++ b/plugins/rainlab/user/components/account/signin.htm
@@ -31,3 +31,6 @@
     <button type="submit" class="btn btn-default">Sign in</button>
 
 {{ form_close() }}
+
+
+<a data-request="onLogout" data-request-data="redirect: '/good-bye'">Sign out</a>
